# adcorr_hdf5

./: README.rst  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.rst
.github/workflows/: code.yml  docs.yml  linkcheck.yml
docs/: conf.py  index.rst
docs/developer/how-to/: make-release.rst  update-tools.rst
docs/developer/tutorials/: dev-install.rst
docs/user/how-to/: run-container.rst
docs/user/reference/: api.rst
docs/user/tutorials/: installation.rst
src/adcorr_hdf5/: __init__.py  cli.py
tests/: test_cli.py
